--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "element-ui": "^2.15.6",
+    "marked": "^4.0.15",
     "mavon-editor": "^2.10.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2"
